--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,9 +11,6 @@
 # Help: https://bootstrapmade.com/color-system/
 --------------------------------------------------------------*/
 /* Fonts */
-:root {
-    --bs-body-font-family: "Inter", sans-serif;
-}
 
 :root {
   --default-font: "Inconsolata",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -573,17 +570,16 @@ section,
 
 .portfolio .portfolio-content .portfolio-info h4 {
   font-size: 18px;
+  mask-border: 0;
   font-weight: 400;
   color: #ffffff;
   display: inline-block;
-}
 
-/* Your image styling (WORKS NOW) */
-.portfolio-img {
-  width: 100%;
-  height: 300px;      /* Adjust height as you prefer */
-  object-fit: cover;  /* Clean crop */
-  border-radius: 8px; /* Optional */
+  .portfolio-img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
 
