--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -69,6 +69,8 @@
   }
 }
 
-.card-surface {
-  background-color: #eeeeee !important;
+.portfolio-info.card-surface, 
+.col-lg-6.card-surface,
+.portfolio-item.card-surface {
+    background-color: #eeeeee !important; 
 }
