--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -78,3 +78,8 @@
 #portfolio .portfolio-item.card-surface {
     background-color: #eeeeee !important; 
 }
+
+.top-section-hidden {
+    opacity: 0 !important;
+    transition: opacity 1.5s ease-in-out !important; 
+}
