--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -80,6 +80,6 @@
 }
 
 .top-section-hidden {
-    opacity: 0 !important;
+    opacity: 0 ;
     transition: opacity 1.5s ease-in-out !important; 
 }
